<resources>
    <string name="app_name">SimpleDorar</string>
    <string name="app_audio_search">SimpleDorarAudio</string>
    <string name="search_key">بحث</string>
    <string name="placeholder">تحقق من صحة الحديث</string>
    <string name="search_audio_btn">بحث صوتي</string>
    <!--
    result page
    -->
    <string name="title_activity_a_hadith_result">AHadithResultActivity</string>
    <string name="search_key_result">كلمة</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="search_locale">ar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="setting">Setting</string>
    <string name="last_search">مؤخرا</string>
    <string name="history_icon">History Icon</string>
    <string name="go">Go</string>
    <string name="total_result">النتائج ( %1$s )</string>
    <string name="share">مشاركة</string>
    <string name="copy">نسخ</string>
    <string name="note">note</string>
    <string name="rawi">الراوي</string>
    <string name="mohdits">محدث</string>
    <string name="khulashoh">خلاصة حكم الحديث</string>
    <string name="save">حفظ</string>
    <string name="tambah">المزيد...</string>
    <string name="search_category">Choose Category</string>
    <string name="ok">ok</string>
    <string name="autocomplete_not_found">Not found. Create \'%s\' ?</string>
    <string name="bookmark">Bookmark</string>
    <string name="reference_text">%1$s, %2$s %3$s from %4$s</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="delete_confirmation">Are you sure to delete this %s?</string>
    <string name="no">no</string>
    <string name="change_category">change category</string>
    <string name="add_new_bookmark">add new bookmark</string>
    <string name="no_history">No histories. Make a first search.</string>
    <string name="no_result">No result found. Refine your search query</string>
    <string name="info">info</string>
</resources>