<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:onClick="onSearchClick"
        android:text="@string/search_key"
        app:layout_constraintEnd_toEndOf="@+id/skey"
        app:layout_constraintTop_toBottomOf="@+id/skey" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/skey"
        android:layout_width="379dp"
        android:layout_height="43dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:hint="@string/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:onClick="onAudioSearchClick"
        android:text="@string/search_audio_btn"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintTop_toBottomOf="@+id/skey"
        android:layout_marginRight="9dp" />

</androidx.constraintlayout.widget.ConstraintLayout>