<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="resultItem"
            type="com.ihfazh.simpledorar.search.ResultItem" />
        <variable
            name="styledText"
            type="android.text.SpannableString" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".search.SearchResultDetail">

        <TextView
            android:layout_marginTop="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@{styledText}"
            android:textAlignment="center"
            android:bufferType="spannable"
            tools:text="Ini Hadits\nabc"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:lineSpacingExtra="16sp"
            android:id="@+id/resultText"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mashdar"
            app:layout_constraintStart_toStartOf="@id/resultText"
            app:layout_constraintEnd_toEndOf="@id/resultText"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/resultText"
            android:text="@{resultItem.mashdar + ' ' + resultItem.shafha}"
            tools:text="الراو الراويي"
            android:textSize="13sp"
            android:layout_marginTop="8dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_divider"
            app:layout_constraintTop_toBottomOf="@id/mashdar"
            app:layout_constraintBottom_toTopOf="@id/label_rawi"
            android:id="@+id/divider"
            />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_rawi"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:text="@string/rawi"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_mohdits"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/label_rawi"
            android:text="@string/mohdits"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label_hokm"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/label_mohdits"
            android:text="@string/khulashoh"
            android:layout_marginTop="8dp"
            />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="label_mohdits, label_rawi, label_hokm"
            android:id="@+id/hadithInfoBarrier"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_rawi"
            android:text="@{resultItem.rawi}"
            tools:text="الراوي"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@id/label_rawi"
            app:layout_constraintEnd_toStartOf="@id/hadithInfoBarrier"
            app:layout_constraintBottom_toBottomOf="@id/label_rawi"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/value_mohdits"
            android:text="@{resultItem.mohaddith}"
            app:layout_constraintTop_toTopOf="@id/label_mohdits"
            app:layout_constraintEnd_toStartOf="@id/hadithInfoBarrier"
            app:layout_constraintTop_toBottomOf="@id/label_mohdits"
            android:layout_marginEnd="8dp"
            tools:text="الراوي"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/value_hokm"
            android:text="@{resultItem.hokm}"
            app:layout_constraintTop_toTopOf="@id/label_hokm"
            app:layout_constraintEnd_toStartOf="@id/hadithInfoBarrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_hokm"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            tools:text="jkflasjd flkj flaskdjf laskdf laskdjflksa dflksadjf lksadjflksaf lksdajfالراوي"
            android:textSize="18sp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_margin="8dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="16dp"
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_margin="8dp"
            android:id="@+id/mulahadzhoh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@id/share"
            app:layout_constraintTop_toTopOf="@id/share"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintEnd_toStartOf="@id/copy"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_margin="8dp"
            android:id="@+id/copy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            app:layout_constraintTop_toTopOf="@id/share"
            app:layout_constraintBottom_toBottomOf="@id/share"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>